data/derived/comb/progs/unify/prog1042.ml.out
Characters 76-88:
  | hd::tl -> hd + (sumList tl)
                   ^^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
